# train

./: .gitignore  .pre-commit-config.yaml  2.py  devto_by_id_parser.py  devto_profile_parser.py  everyone_devto_profiles.csv  html.html  main.py  parse.py  popular_devto_parser.py  pyproject.toml  requirements.txt  s.py
.github/: pull_request_template.m
.github/workflows/: pythonapp.yml
model/: developer.py
