[tool.poetry]
name = "train"
version = "0.1.0"
description = ""
authors = ["Kostik"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pre-commit = "^2.4.0"
lxml = "^4.5.1"
black = "^19.10b0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
